--- a/docs/customize-testing/bootstrapping-test-generation.mdx
+++ b/docs/customize-testing/bootstrapping-test-generation.mdx
@@ -3,6 +3,8 @@ title: "Bootstrapping SDK Tests"
 description: "Learn how to automatically generate contract testing for your API and SDKs."
 ---
 
+import { Table } from "@/components/ui/Table";
+
 # Bootstrapping SDK Tests
 
 Automatically generate tests for your SDKs. Speakeasy can boostrap tests for all your operations including any new operations added in the future.
@@ -63,12 +65,18 @@ paths:
 
 Generated test files are written in language-specific locations, relative to the root of the SDK:
 
-| Language | Location |
-|---|---|
-| Go | `tests/` |
-| Python | `tests/` |
-| TypeScript | `src/__tests__` |
-| Java | `src/test/java` |
+<Table
+  data={[
+    { language: "Go", location: "`tests/`" },
+    { language: "Python", location: "`tests/`" },
+    { language: "TypeScript", location: "`src/__tests__`" },
+    { language: "Java", location: "`src/test/java`" }
+  ]}
+  columns={[
+    { key: "language", header: "Language" },
+    { key: "location", header: "Location" }
+  ]}
+/>
 
 If the mock server is also generated, its output will be in a `mockserver` directory under these locations.
 
