--- a/docs/customize/authentication/custom-security-schemes.mdx
+++ b/docs/customize/authentication/custom-security-schemes.mdx
@@ -6,6 +6,7 @@ description: "Customize your security and authentication SDK settings for OAuth.
 
 import { CodeWithTabs } from "@/components/codehike/CodeTabs";
 import { Callout } from "@/components/ui/Callout";
+import { Table } from "@/components/ui/Table";
 
 # Custom Security Schemes
 
@@ -18,9 +19,30 @@ Custom Security Schemes define a JSON Schema for SDK security options. Combined 
 
 ### Language support
 
-| TypeScript | Python | Go  | C#  | Java | PHP | Swift | Ruby |
-| ---------- | ------ | --- | --- | ---- | --- | ----- | ---- |
-| ✅         | ✅     | ✅  | 🏗️  | ✅   | 🏗️  | 🏗️    | 🏗️   |
+<Table
+  data={[
+    { 
+      typescript: "✅",
+      python: "✅",
+      go: "✅",
+      csharp: "🏗️",
+      java: "✅",
+      php: "🏗️",
+      swift: "🏗️",
+      ruby: "🏗️"
+    }
+  ]}
+  columns={[
+    { key: "typescript", header: "TypeScript" },
+    { key: "python", header: "Python" },
+    { key: "go", header: "Go" },
+    { key: "csharp", header: "C#" },
+    { key: "java", header: "Java" },
+    { key: "php", header: "PHP" },
+    { key: "swift", header: "Swift" },
+    { key: "ruby", header: "Ruby" }
+  ]}
+/>
 
 ### Define a custom security scheme
 
