--- a/docs/customize/responses/errors.mdx
+++ b/docs/customize/responses/errors.mdx
@@ -305,10 +305,27 @@ Apply the `x-speakeasy-errors` extension at the `paths`, `path item`, or `operat
 
 The `x-speakeasy-errors` extension is an object with the following properties:
 
-| Property      | Type       | Description                                                                                                                                                                                                                                                                                                                       |
-| ------------- | ---------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `override`    | `boolean`  | If `true`, the statusCodes list overrides any parent `x-speakeasy-errors` extension for this object and its children. Defaults to `false`.   |
-| `statusCodes` | `[string]` | An array of status codes to handle as errors. Merges with any parent `x-speakeasy-errors` extension unless override is `true`. Each status code must be in quotation marks (e.g., `"503"`) for JSON and YAML compatibility. Wildcards (e.g., `5XX`) are supported. |
+import { Table } from "@/components/ui/Table";
+
+<Table 
+  data={[
+    { 
+      property: "override", 
+      type: "boolean", 
+      description: "If `true`, the statusCodes list overrides any parent `x-speakeasy-errors` extension for this object and its children. Defaults to `false`." 
+    },
+    { 
+      property: "statusCodes", 
+      type: "[string]", 
+      description: "An array of status codes to handle as errors. Merges with any parent `x-speakeasy-errors` extension unless override is `true`. Each status code must be in quotation marks (e.g., `\"503\"`) for JSON and YAML compatibility. Wildcards (e.g., `5XX`) are supported." 
+    }
+  ]}
+  columns={[
+    { key: "property", header: "Property" },
+    { key: "type", header: "Type" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 If the `statusCodes` array contains undocumented status codes, the SDK returns an SDK error object with the status code, response body as a string, and the raw response object. Otherwise, if `content-type` is `application/json`, it returns an error object from the response object in the OpenAPI document.
 
