--- a/docs/customize/runtime/pagination.mdx
+++ b/docs/customize/runtime/pagination.mdx
@@ -234,20 +234,52 @@ Indicates whether the input should be passed into the operation as a path or que
 
 **`type`**
 
-| Type     | Description                                                                                                                                           |
-| -------- | ----------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `page`   | The variable that will be incremented on calling `next()`.                                                                                            |
-| `offset` | The variable that will be incremented by the number of results returned by the previous execution. **Note:** Requires `outputs.Results`.              |
-| `limit`  | When provided, `next()` returns `null` (or equivalent) when the number of results returned by the previous execution is less than the value provided. |
+import { Table } from "@/components/ui/Table";
+
+<Table
+  data={[
+    {
+      type: "<code>page</code>",
+      description: "The variable that will be incremented on calling `next()`."
+    },
+    {
+      type: "`offset`",
+      description: "The variable that will be incremented by the number of results returned by the previous execution. **Note:** Requires `outputs.Results`."
+    },
+    {
+      type: "`limit`",
+      description: "When provided, `next()` returns `null` (or equivalent) when the number of results returned by the previous execution is less than the value provided."
+    }
+  ]}
+  columns={[
+    { key: "type", header: "Type" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ## Outputs
 
 All the outputs are expected to be strings adhering to the [JSONPath](https://goessner.net/articles/JsonPath/) schema.
 
-| Key          | Description                                                                                                                                          |
-| ------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `numPages`   | When provided, `next()` returns `null` if the `page` input value exceeds the value found at the provided JSON path. **Note:** Requires `page` input. |
-| `results`    | When provided, `next()` returns `null` if the array found at the provided JSON path is empty. **Note:** Required by `offset` input.                  |
-| `nextCursor` | Populates `cursor` with the value found at the provided JSON path when calling `next()`. **Note:** Required by `type: cursor`.                       |
+<Table
+  data={[
+    {
+      key: "`numPages`",
+      description: "When provided, `next()` returns `null` if the `page` input value exceeds the value found at the provided JSON path. **Note:** Requires `page` input."
+    },
+    {
+      key: "`results`",
+      description: "When provided, `next()` returns `null` if the array found at the provided JSON path is empty. **Note:** Required by `offset` input."
+    },
+    {
+      key: "`nextCursor`",
+      description: "Populates `cursor` with the value found at the provided JSON path when calling `next()`. **Note:** Required by `type: cursor`."
+    }
+  ]}
+  columns={[
+    { key: "key", header: "Key" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 If the JSONPath value provided for an output does not match the response returned, `next()` returns `null` because pagination cannot be continued.
