--- a/docs/customize/runtime/retries.mdx
+++ b/docs/customize/runtime/retries.mdx
@@ -5,6 +5,7 @@ slug: "/customize-sdks/retries/"
 ---
 
 import { CodeWithTabs } from "@/components/codehike/CodeTabs";
+import { Table } from "@/components/ui/Table";
 
 
 # Retries
@@ -34,16 +35,24 @@ x-speakeasy-retries:
 
 If you add the `x-speakeasy-retries` extension to the root of the OpenAPI document, the SDK Generator will generate a global retry configuration that will be used for all requests made by the SDK. The `x-speakeasy-retries` extension supports the following properties:
 
-| Property                  | Type      | Description                                                             | Required |
-| ------------------------- | --------- | ----------------------------------------------------------------------- | -------- |
-| `strategy`                | `string`  | The retry strategy to use. Only `backoff` is currently supported.       | Yes      |
-| `backoff`                 | `object`  | The configuration of the backoff strategy, if chosen.                   | No       |
-| `backoff.initialInterval` | `integer` | The initial interval to use for the backoff strategy (in milliseconds). | No       |
-| `backoff.maxInterval`     | `integer` | The maximum interval between retries (in milliseconds).                 | No       |
-| `backoff.maxElapsedTime`  | `integer` | The maximum elapsed time to retry for (in milliseconds).                | No       |
-| `backoff.exponent`        | `number`  | The exponent used to increase the interval between retries.             | No       |
-| `statusCodes`             | `array`   | The HTTP status codes to retry on.                                      | Yes      |
-| `retryConnectionErrors`   | `boolean` | Whether to retry any connection errors.                                 | No       |
+<Table
+  data={[
+    { property: "`strategy`", type: "`string`", description: "The retry strategy to use. Only `backoff` is currently supported.", required: "Yes" },
+    { property: "`backoff`", type: "`object`", description: "The configuration of the backoff strategy, if chosen.", required: "No" },
+    { property: "`backoff.initialInterval`", type: "`integer`", description: "The initial interval to use for the backoff strategy (in milliseconds).", required: "No" },
+    { property: "`backoff.maxInterval`", type: "`integer`", description: "The maximum interval between retries (in milliseconds).", required: "No" },
+    { property: "`backoff.maxElapsedTime`", type: "`integer`", description: "The maximum elapsed time to retry for (in milliseconds).", required: "No" },
+    { property: "`backoff.exponent`", type: "`number`", description: "The exponent used to increase the interval between retries.", required: "No" },
+    { property: "`statusCodes`", type: "`array`", description: "The HTTP status codes to retry on.", required: "Yes" },
+    { property: "`retryConnectionErrors`", type: "`boolean`", description: "Whether to retry any connection errors.", required: "No" }
+  ]}
+  columns={[
+    { key: "property", header: "Property" },
+    { key: "type", header: "Type" },
+    { key: "description", header: "Description" },
+    { key: "required", header: "Required" }
+  ]}
+/>
 
 The `statusCodes` property supports passing a list of distinct HTTP status codes or a wildcard range to retry requests on. For example, `5XX` will retry requests on all status codes between 500 (inclusive) and 600 (exclusive).
 
