--- a/docs/product-security.mdx
+++ b/docs/product-security.mdx
@@ -4,6 +4,7 @@ description: "Speakeasy prioritizes security and privacy as core development pri
 ---
 
 import { Callout } from "@/components/ui/Callout";
+import { Table } from "@/components/ui/Table";
 
 # Security and data privacy
 
@@ -115,18 +116,24 @@ The Speakeasy CLI submits events to the Speakeasy platform to monitor errors, us
 
 The CLI commands that currently send telemetry data are `speakeasy run` and `speakeasy generate`. The data points these commands send are as follows:
 
-| Data point | Description |
-| -------- | -------- |
-| `CustomerID` | A unique string identifying a specific customer account|
-| `WorkspaceID` | A unique string identifying a specific customer workspace|
-| `Language` | The name of the target language, for example, `go`, `python`, or `typescript`|
-| `Template` | The name of the template folder to use for the target, for example, `go`, `typescriptv2`, or `javav2`|
-| `RunLocation` | Whether the generation was run in a terminal (`cli`) or GitHub Action (`action`)|
-| `GenVersion` | The specific generator version used|
-| `CLIVersion` | The specific CLI version used|
-| `FeatureTracking`| A list of features the generator does or does not use|
-| `ConfigTracking` | A list of configuration values the generator uses|
-| `GenIgnoreUsed` | Whether a generation action used a `.genignore` file (read more in the [`.genignore` docs](/docs/customize/code/monkey-patching#mark-files-with-genignore))|
+<Table
+  data={[
+    { dataPoint: "`CustomerID`", description: "A unique string identifying a specific customer account" },
+    { dataPoint: "`WorkspaceID`", description: "A unique string identifying a specific customer workspace" },
+    { dataPoint: "`Language`", description: "The name of the target language, for example, `go`, `python`, or `typescript`" },
+    { dataPoint: "`Template`", description: "The name of the template folder to use for the target, for example, `go`, `typescriptv2`, or `javav2`" },
+    { dataPoint: "`RunLocation`", description: "Whether the generation was run in a terminal (`cli`) or GitHub Action (`action`)" },
+    { dataPoint: "`GenVersion`", description: "The specific generator version used" },
+    { dataPoint: "`CLIVersion`", description: "The specific CLI version used" },
+    { dataPoint: "`FeatureTracking`", description: "A list of features the generator does or does not use" },
+    { dataPoint: "`ConfigTracking`", description: "A list of configuration values the generator uses" },
+    { dataPoint: "`GenIgnoreUsed`", description: "Whether a generation action used a `.genignore` file (read more in the [`.genignore` docs](/docs/customize/code/monkey-patching#mark-files-with-genignore))" }
+  ]}
+  columns={[
+    { key: "dataPoint", header: "Data point" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ### Third-party dependencies
 
