--- a/openapi-hub/examples.mdx
+++ b/openapi-hub/examples.mdx
@@ -1,5 +1,7 @@
 # Examples in OpenAPI
 
+import { Table } from "@/components/ui/Table";
+
 ## Why add examples to your OpenAPI spec?
 
 Adding examples to your OpenAPI spec significantly improves the readability of generated artifacts, like documentation and SDKs, by providing concrete, real-world illustrations of how your API behaves. This reduces the learning curve and potential for user errors.
@@ -64,13 +66,21 @@ Alternatively, you can define the example as a reusable Example Object in the `c
 
 This is the format of the Example Object:
 
-| Field           | Type                      | Required | Description                                                                                                                                |
-| --------------- | ------------------------- | -------- | ------------------------------------------------------------------------------------------------------------------------------------------ |
-| `summary`       | String                    |          | A brief summary of the example.                                                                                                            |
-| `description`   | String                    |          | A detailed description of the example. This may contain [CommonMark syntax](https://spec.commonmark.org/) to provide a rich description.   |
-| `value`         | Any (typically object)                       |          | The example value. This field can contain any valid JSON data, including simple values or complex objects with multiple properties, as shown in the example below. Mutually exclusive with the `externalValue` field.                                                                      |
-| `externalValue` | String                    |          | A URL that points to the example. This is useful if the example is too large to include inline. Mutually exclusive with the `value` field. |
-| `x-*`           | [Extensions](/openapi/extensions) |          | Any number of extension fields can be added to the Example Object that can be used by tooling and vendors.             
+<Table
+  data={[
+    { field: "`summary`", type: "String", required: "", description: "A brief summary of the example." },
+    { field: "`description`", type: "String", required: "", description: "A detailed description of the example. This may contain [CommonMark syntax](https://spec.commonmark.org/) to provide a rich description." },
+    { field: "`value`", type: "Any (typically object)", required: "", description: "The example value. This field can contain any valid JSON data, including simple values or complex objects with multiple properties, as shown in the example below. Mutually exclusive with the `externalValue` field." },
+    { field: "`externalValue`", type: "String", required: "", description: "A URL that points to the example. This is useful if the example is too large to include inline. Mutually exclusive with the `value` field." },
+    { field: "`x-*`", type: "[Extensions](/openapi/extensions)", required: "", description: "Any number of extension fields can be added to the Example Object that can be used by tooling and vendors." }
+  ]}
+  columns={[
+    { key: "field", header: "Field" },
+    { key: "type", header: "Type" },
+    { key: "required", header: "Required" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 ```yaml
 components:
