--- a/openapi-hub/references.mdx
+++ b/openapi-hub/references.mdx
@@ -1,5 +1,7 @@
 # References ($ref) in OpenAPI
 
+import { Table } from "@/components/ui/Table";
+
 While creating an OpenAPI schema, you might notice duplicated parts in your document. Using references in OpenAPI helps you define a schema once and reuse it elsewhere in the document. This approach minimizes duplication and makes your OpenAPI document more readable and maintainable.
 
 To reference a schema, use the `$ref` keyword followed by the path to the schema. The path can be an absolute or relative URI and can also refer to objects in different files.
@@ -8,11 +10,19 @@ To reference a schema, use the `$ref` keyword followed by the path to the schema
 
 Any object supported by the [Components Object](./components.md) can be replaced by an OpenAPI Reference Object. A Reference Object points to a component using the `$ref` field, which is itself a [JSON Schema Reference](#json-schema-references) and can optionally override the `summary` or `description` of the referenced object.
 
-| Field         | Type   | Required | Description                                                                                                                                                                                                                                                                                |
-| ------------- | ------ | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| `$ref`        | String | ✅       | A [JSON Schema reference](#json-schema-references) to a component.                                                                                                                                                                                                                         |
-| `summary`     | String |          | A summary that overrides the referenced component's `summary` field. This field is ignored if the referenced component's type does not support the `summary` field.                                                                                                                        |
-| `description` | String |          | A detailed description that overrides the referenced component's `description` field. This field is ignored if the referenced component's type does not support the `description` field. This may contain [CommonMark syntax](https://spec.commonmark.org/) to provide a rich description. |
+<Table
+  data={[
+    { field: "`$ref`", type: "String", required: "✅", description: "A [JSON Schema reference](#json-schema-references) to a component." },
+    { field: "`summary`", type: "String", required: "", description: "A summary that overrides the referenced component's `summary` field. This field is ignored if the referenced component's type does not support the `summary` field." },
+    { field: "`description`", type: "String", required: "", description: "A detailed description that overrides the referenced component's `description` field. This field is ignored if the referenced component's type does not support the `description` field. This may contain [CommonMark syntax](https://spec.commonmark.org/) to provide a rich description." }
+  ]}
+  columns={[
+    { key: "field", header: "Field" },
+    { key: "type", header: "Type" },
+    { key: "required", header: "Required" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 In the example below, we define a `Drink` schema in the `components` section:
 
@@ -79,14 +89,20 @@ To create a pointer to `value`, you would need to use the string `/a~1b/c~0d`.
 
 References in OpenAPI can be relative or absolute. Relative references point to elements within the same API description, while absolute references point to elements in external documents. Absolute references can also point to external resources like online JSON files. Runtime expressions are another type of reference that allows for dynamic values during API execution.
 
-| `$ref` string                       | Description                                                                                                    |
-| ----------------------------------- | -------------------------------------------------------------------------------------------------------------- |
-| `#/components/schemas/Drink`        | References the `Drink` schema in the `components` section of the current file.                                 |
-| `./person.yaml`                     | References the entire `person.yaml` file. The entire content of `person.yaml` is used.                         |
-| `../person.yaml`                    | References the `person.yaml` file in the parent directory. The entire content of `person.yaml` is used.        |
-| `./people.yaml#/Person`             | References the `Person` schema in the `people.yaml` file. Only the `Person` schema from `people.yaml` is used. |
-| `https://pastebin.com/raw/LAvtwJn6` | References an external schema stored online. The entire content of the external schema is used.                |
-| `$request.path.orderId`             | A runtime expression that passes the `orderId` from the parent operation.                                      |
+<Table
+  data={[
+    { refString: "`#/components/schemas/Drink`", description: "References the `Drink` schema in the `components` section of the current file." },
+    { refString: "`./person.yaml`", description: "References the entire `person.yaml` file. The entire content of `person.yaml` is used." },
+    { refString: "`../person.yaml`", description: "References the `person.yaml` file in the parent directory. The entire content of `person.yaml` is used." },
+    { refString: "`./people.yaml#/Person`", description: "References the `Person` schema in the `people.yaml` file. Only the `Person` schema from `people.yaml` is used." },
+    { refString: "`https://pastebin.com/raw/LAvtwJn6`", description: "References an external schema stored online. The entire content of the external schema is used." },
+    { refString: "`$request.path.orderId`", description: "A runtime expression that passes the `orderId` from the parent operation." }
+  ]}
+  columns={[
+    { key: "refString", header: "`$ref` string" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 
 ### Relative References in OpenAPI
