--- a/openapi-hub/schemas/objects/polymorphism.mdx
+++ b/openapi-hub/schemas/objects/polymorphism.mdx
@@ -1,14 +1,24 @@
 # Composition and Inheritance in OpenAPI
 
+import { Table } from "@/components/ui/Table";
+
 OpenAPI allows us to combine object schemas using the keywords `allOf`, `anyOf`, and `oneOf`.
 
 These keywords correspond to the following logical operators:
 
-| Keyword | Operator | Description                                                                      | How to use                                                |
-| ------- | -------- | -------------------------------------------------------------------------------- | --------------------------------------------------------- |
-| `oneOf` | `XOR`    | An exclusive disjunction. Instances must satisfy **exactly one of** A, B, or C.  | Use for describing Union Types         |
-| `allOf` | `AND`    | A union of all subschemas. Instances must satisfy **all of** A, B, and C.        | Use for describing model composition: the creation of complex schemas via the composition of simpler schemas. |
-| `anyOf` | `OR`     | An inclusive disjunction. Instances must satisfy **at least one of** A, B, or C. | There is no established convention about how anyOf should be interpreted. **Use with extreme caution**        |
+<Table
+  data={[
+    { keyword: "`oneOf`", operator: "`XOR`", description: "An exclusive disjunction. Instances must satisfy **exactly one of** A, B, or C.", howToUse: "Use for describing Union Types" },
+    { keyword: "`allOf`", operator: "`AND`", description: "A union of all subschemas. Instances must satisfy **all of** A, B, and C.", howToUse: "Use for describing model composition: the creation of complex schemas via the composition of simpler schemas." },
+    { keyword: "`anyOf`", operator: "`OR`", description: "An inclusive disjunction. Instances must satisfy **at least one of** A, B, or C.", howToUse: "There is no established convention about how anyOf should be interpreted. **Use with extreme caution**" }
+  ]}
+  columns={[
+    { key: "keyword", header: "Keyword" },
+    { key: "operator", header: "Operator" },
+    { key: "description", header: "Description" },
+    { key: "howToUse", header: "How to use" }
+  ]}
+/>
 
 The example below illustrates the different composition keywords:
 
@@ -44,11 +54,19 @@ When using `oneOf` to indicate that a request body or response contains exactly 
 
 The discriminator object in OpenAPI tells a client or server which field can be used to discriminate between different schemas.
 
-| Field          | Type                      | Required | Description                                                                                                      |
-| -------------- | ------------------------- | -------- | ---------------------------------------------------------------------------------------------------------------- |
-| `propertyName` | String                    | ✅       | The property name used to discriminate between schemas.                                                          |
-| `mapping`      | Map[string, string]       |          | An optional map of values and schema reference strings.                                                          |
-| `x-*`          | [Extensions](/openapi/extensions) |          | Any number of extension fields can be added to the discriminator object that can be used by tooling and vendors. |
+<Table
+  data={[
+    { field: "`propertyName`", type: "String", required: "✅", description: "The property name used to discriminate between schemas." },
+    { field: "`mapping`", type: "Map[string, string]", required: "", description: "An optional map of values and schema reference strings." },
+    { field: "`x-*`", type: "[Extensions](/openapi/extensions)", required: "", description: "Any number of extension fields can be added to the discriminator object that can be used by tooling and vendors." }
+  ]}
+  columns={[
+    { key: "field", header: "Field" },
+    { key: "type", header: "Type" },
+    { key: "required", header: "Required" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 In the example below, the Speakeasy Bar can receive one of two order types: A drink order with a bar-counter reference or an ingredient order with a delivery address:
 
