--- a/openapi-hub/webhooks.mdx
+++ b/openapi-hub/webhooks.mdx
@@ -1,5 +1,7 @@
 # Webhooks in OpenAPI
 
+import { Table } from "@/components/ui/Table";
+
 **(Available in OpenAPI 3.1.x ONLY)**
 
 `webhooks` are a mechanism that allows an API to send real-time data to a user as soon as an event occurs (without requiring the user to take any action). The user simply needs to subscribe to the event stream and provide a URL to start receiving data.
