--- a/docs/customize/authentication/overview.mdx
+++ b/docs/customize/authentication/overview.mdx
@@ -15,11 +15,37 @@ Speakeasy-created SDKs have authentication automatically configured based on the
 
 APIs authenticated with simple schemes, such as Basic HTTP auth, API keys, and bearer tokens, work out of the box. For APIs using short-lived tokens (OAuth), additional configuration is required to simplify setup.
 
-| Authentication Mechanism                           | Language Support                                                                                                  |
-| -------------------------------------------------- | ----------------------------------------------------------------------------------                                |
-| HTTP Basic authentication                          | ✅  [Docs](/docs/customize/authentication/simple-schemes#basic-http-authentication)                               |
-| API key [header, query]                            | ✅  [Docs](/docs/customize/authentication/simple-schemes#api-key-authentication)                                  |
-| Bearer Token authentication                        | ✅  [Docs](/docs/customize/authentication/configuration)                                                          |
-| OAuth                                              | ✅  [All GA and some beta languages](/docs/customize/authentication/oauth)                                        |
-| mTLS                                               | ✅  [Using hooks](/docs/customize/code/sdk-hooks)                                                                 |
-| Custom security schemes                            | ✅  [Using Speakeasy custom security schemes extension](/docs/customize/authentication/custom-security-schemes)   |
+import { Table } from "@/components/ui/Table";
+
+<Table 
+  data={[
+    { 
+      mechanism: "HTTP Basic authentication", 
+      support: "✅  [Docs](/docs/customize/authentication/simple-schemes#basic-http-authentication)" 
+    },
+    { 
+      mechanism: "API key [header, query]", 
+      support: "✅  [Docs](/docs/customize/authentication/simple-schemes#api-key-authentication)" 
+    },
+    { 
+      mechanism: "Bearer Token authentication", 
+      support: "✅  [Docs](/docs/customize/authentication/configuration)" 
+    },
+    { 
+      mechanism: "OAuth", 
+      support: "✅  [All GA and some beta languages](/docs/customize/authentication/oauth)" 
+    },
+    { 
+      mechanism: "mTLS", 
+      support: "✅  [Using hooks](/docs/customize/code/sdk-hooks)" 
+    },
+    { 
+      mechanism: "Custom security schemes", 
+      support: "✅  [Using Speakeasy custom security schemes extension](/docs/customize/authentication/custom-security-schemes)" 
+    }
+  ]}
+  columns={[
+    { key: "mechanism", header: "Authentication Mechanism" },
+    { key: "support", header: "Language Support" }
+  ]}
+/>
