--- a/openapi-hub/extensions.mdx
+++ b/openapi-hub/extensions.mdx
@@ -1,5 +1,7 @@
 # Extensions in OpenAPI
 
+import { Table } from "@/components/ui/Table";
+
 Extensions allow us to add extra keywords not included in the OpenAPI Specification. This enables tooling such as SDK generators to access vendor-specific functionality directly in an OpenAPI document.
 
 Extension fields always start with `x-`.
@@ -8,9 +10,16 @@ Although optional, it is conventional for vendors to further prefix their extens
 
 The value of an extension field can be an object, array, `null`, or any primitive value. Vendors determine the values they expect for the extensions they use.
 
-| Field | Type | Description                                                                                                            |
-| ----- | ---- | ---------------------------------------------------------------------------------------------------------------------- |
-| `^x-` | Any  | An extension's value can be an object, array, primitive, or `null`. Expected values are determined by tooling vendors. |
+<Table
+  data={[
+    { field: "`^x-`", type: "Any", description: "An extension's value can be an object, array, primitive, or `null`. Expected values are determined by tooling vendors." }
+  ]}
+  columns={[
+    { key: "field", header: "Field" },
+    { key: "type", header: "Type" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 Here's an example of a Speakeasy extension that adds retries to requests made by Speakeasy-managed SDKs:
 
