--- a/openapi-hub/schemas.mdx
+++ b/openapi-hub/schemas.mdx
@@ -1,5 +1,7 @@
 # Schema Object in OpenAPI
 
+import { Table } from "@/components/ui/Table";
+
 The Schema Object represents any data type used as input or output in OpenAPI. Data types can be objects, arrays, or primitives such as `string`, `number`, `integer`, and `boolean`.
 
 Schema objects are sometimes referred to as _models_, _data types_, or simply, _schemas_. This is because schema types are used to model complex data types used by an API.
@@ -17,14 +19,21 @@ OpenAPI 3.1 changes the definition of two JSON Schema properties:
 
 OpenAPI adds another vocabulary to JSON Schema with the following properties:
 
-| Field Name           | Type                                                            | Description                                                                                                                                                                                            |
-| -------------------- | --------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| `discriminator`      | [Discriminator Object](/openapi/schemas/objects/polymorphism#discriminator-object)                   | A discriminator object describes how to differentiate between related schemas based on the value of a field in a request or response. See [Composition and Inheritance](/openapi/schemas/objects/polymorphism). |
-| `xml`                | [XML Object](/openapi/schemas/objects/xml)                                       | Adds details about how the schema should be represented as XML.                                                                                                                                        |
-| `externalDocs`       | [External Documentation Object](/openapi/external-documentation) | Points to external documentation for this schema.                                                                                                                                                      |
-| `example`            | Any                                                             | An example that satisfies this schema. **Deprecated:** Although valid, the use of `example` is discouraged. Use [Examples](/openapi/examples) instead.                                                         |
-| `x-`                 | [Extensions](/openapi/extensions)                                       | Any number of extension fields can be added to the schema that can be used by tooling and vendors.                                                                                                     |
-| Arbitrary properties | Any                                                             | The schema object supports arbitrary properties without the `x-` prefix. This is discouraged in favor of [Extensions](/openapi/extensions).                                                                    |
+<Table
+  data={[
+    { fieldName: "`discriminator`", type: "[Discriminator Object](/openapi/schemas/objects/polymorphism#discriminator-object)", description: "A discriminator object describes how to differentiate between related schemas based on the value of a field in a request or response. See [Composition and Inheritance](/openapi/schemas/objects/polymorphism)." },
+    { fieldName: "`xml`", type: "[XML Object](/openapi/schemas/objects/xml)", description: "Adds details about how the schema should be represented as XML." },
+    { fieldName: "`externalDocs`", type: "[External Documentation Object](/openapi/external-documentation)", description: "Points to external documentation for this schema." },
+    { fieldName: "`example`", type: "Any", description: "An example that satisfies this schema. **Deprecated:** Although valid, the use of `example` is discouraged. Use [Examples](/openapi/examples) instead." },
+    { fieldName: "`x-`", type: "[Extensions](/openapi/extensions)", description: "Any number of extension fields can be added to the schema that can be used by tooling and vendors." },
+    { fieldName: "Arbitrary properties", type: "Any", description: "The schema object supports arbitrary properties without the `x-` prefix. This is discouraged in favor of [Extensions](/openapi/extensions)." }
+  ]}
+  columns={[
+    { key: "fieldName", header: "Field Name" },
+    { key: "type", header: "Type" },
+    { key: "description", header: "Description" }
+  ]}
+/>
 
 The example below illustrates three schema objects: `IngredientProductCode`, `Ingredient`, and `IngredientType`.
 
